--- a/index.html
+++ b/index.html
@@ -17,8 +17,17 @@
     </style>
 </head>
 <body>
+    
     <h1 align="center">Tic Tac Toe</h1>
-    <table border="1">
+    <table>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+
+    <table align="center" border="1">
         <tr>
             <td id="one1" onclick="test(event)"></td>
             <td id="one2" onclick="test(event)"></td>
