--- a/index.html
+++ b/index.html
@@ -4,46 +4,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        table {
-            height: 400px;
-            width: 400px;
-            padding: 2px;
-        }
-        td {
-            height: 20;
-            width: 20;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bootstrap.css">
 </head>
-<body>
-    
+<body class="col-lg-12 col-ms-6 col-md-12">
+    <br> <br>
+    <div class="col-lg-12 col-ms-6 col-md-12" align="center">
+        <label for="input">FIRST PLAYER</label>
+        <input id="p1" type="text" name="">
+        <br> <br>
+        <label  for="input">SECOND PLAYER</label>
+        <input id="p2" type="text" name="">
+    </div>
+    <button onclick="submit()">start</button>
     <h1 align="center">Tic Tac Toe</h1>
-    <table>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+    <table id="tad2" align="center" class=" border border-danger border=1 col-lg-12 col-ms-6 col-md-12" >
+        <tr class=" border border-danger border=1" >
+            <td id="one1" class=" border border-danger border=1" onclick="test(event)"></td>
+            <td id="one2"  class=" border border-danger border=1" onclick="test(event)"></td>
+            <td id="one3"  class=" border border-danger border=1" onclick="test(event)"></td>
+        </tr>
+        <tr class=" border border-danger border=1 col-lg-12 col-ms-6 col-md-12" >
+            <td id="two1"  class=" border border-danger border=1" onclick="test(event)"></td>
+            <td id="two2"  class=" border border-danger border=1" onclick="test(event)"></td>
+            <td id="two3"  class=" border border-danger border=1" onclick="test(event)"></td>
+        </tr  >
+        <tr class=" border border-danger border=1 col-lg-12 col-ms-6 col-md-12" >
+            <td id="three1"  class=" border border-danger border=1" onclick="test(event)"></td>
+            <td id="three2"  class=" border border-danger border=1" onclick="test(event)"></td>
+            <td id="three3"  class=" border border-danger border=1" onclick="test(event)"></td>
         </tr>
     </table>
+    <br><br><br><br>
 
-    <table align="center" border="1">
+    <!-- <table align="center" id="tad1" class=" border border-danger border=1" onclick="test(event)">
         <tr>
-            <td id="one1" onclick="test(event)"></td>
-            <td id="one2" onclick="test(event)"></td>
-            <td id="one3" onclick="test(event)"></td>
+            <td id=""  class=" border border-danger border=1" onclick="test(event)" width="200px" height="25px">Name</td>
+            <td id=""  class=" border border-danger border=1" onclick="test(event)" width="200px" height="25px">Id</td>
+            <td id=""  class=" border border-danger border=1" onclick="test(event)" width="200px" height="25px">Score</td>
         </tr>
-        <tr>
-            <td id="two1" onclick="test(event)"></td>
-            <td id="two2" onclick="test(event)"></td>
-            <td id="two3" onclick="test(event)"></td>
+        <tr >
+            <td id="n1"  class=" border border-danger border=1" onclick="test(event)" width="200px" height="25px"></td>
+            <td id=""  class=" border border-danger border=1" onclick="test(event)" width="200px" height="25px"></td>
+            <td id=""  class=" border border-danger border=1" onclick="test(event)" width="200px" height="25px"></td>
         </tr>
-        <tr>
-            <td id="three1" onclick="test(event)"></td>
-            <td id="three2" onclick="test(event)"></td>
-            <td id="three3" onclick="test(event)"></td>
+        <tr >
+            <td id="n2"  class=" border border-danger border=1" onclick="test(event)" width="200px" height="25px"></td>
+            <td id=""  class=" border border-danger border=1" onclick="test(event)" width="200px" height="25px"></td>
+            <td id=""  class=" border border-danger border=1" onclick="test(event)" width="200px" height="25px"></td>
         </tr>
-    </table>
+    </table> -->
+    <div class="mt-3 mb-3 col-lg-12 col-ms-6 col-md-12">
+        <h3>Score Board</h3>
+        <div id="bold" class="border border-3 border-dark col-lg-12 col-ms-6 col-md-12 " style="width: 500px;">
+            <div class="row px-3 text-center col-lg-12 col-ms-6 col-md-12" id="row1">
+                <p class="col-5">Name</p>
+                <p class="col-3">Name</p>
+                <p class="col-3">Name</p>
+            </div>
+            <div class="row  text-center col-lg-12 col-ms-6 col-md-12" >
+                <p id="name1" class="col-5 fs-3"></p>
+                <p class="col-3 fs-2">X</p>
+                <p id="score1" class="col-3 fs-2">0</p>
+            </div>
+            <div class="row text-center col-lg-12 col-ms-6 col-md-12" >
+                <p id="name2" class="col-5 fs-3"></p>
+                <p class="col-3 fs-2">o</p>
+                <p id="score2" class="col-3 fs-2">0</p>
+            </div>
+
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
