--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <label  for="input">SECOND PLAYER</label>
         <input id="p2" type="text" name="">
     </div>
-    <button onclick="submit()">start</button>
+    <br>
+    <button id="btn" onclick="submit()">start</button>
     <h1 align="center">Tic Tac Toe</h1>
     <table id="tad2" align="center" class=" border border-danger border=1 col-lg-12 col-ms-6 col-md-12" >
         <tr class=" border border-danger border=1" >
@@ -55,7 +56,7 @@
         </tr>
     </table> -->
     <div class="mt-3 mb-3 col-lg-12 col-ms-6 col-md-12">
-        <h3>Score Board</h3>
+        <h3 align="center">Score Board</h3>
         <div id="bold" class="border border-3 border-dark col-lg-12 col-ms-6 col-md-12 " style="width: 500px;">
             <div class="row px-3 text-center col-lg-12 col-ms-6 col-md-12" id="row1">
                 <p class="col-5">Name</p>
